# ShiftAvr

./: .gitignore  LICENSE  README.md  launch-sandbox-setup.sh
.github/workflows/: build-shiftavrcore.yml
helper-scripts/abstract/: abstract-compile-examples.sh  abstract-compile.sh  abstract-upload.sh
helper-scripts/project-impl/: compile-all.sh  compile-atmega32.sh  compile-atmega328p.sh  compile-examples.sh  upload-to-chip.sh  variables.sh
shiftavr-core/: CMakeLists.txt
shiftavr-core/src/include/adc/: adc.h
shiftavr-core/src/include/adc/admux/: channel.h  vref.h
shiftavr-core/src/include/adc/control/: clkprescaler.h
shiftavr-core/src/include/gpio/: gpio.h
shiftavr-core/src/include/gpio/port/: port.h
shiftavr-core/src/include/gpio/port/part/: gpiopart.h  part-m32.h  part-m328p.h
shiftavr-core/src/include/uart/: uart.h
shiftavr-core/src/include/uart/register/: atmega32.h  atmega328p.h
shiftavr-core/src/libadc/: adc_conversion_isr.c  adc_read.c  adc_start_conversion.c  adc_start_protocol.c  adc_stop_protocol.c
shiftavr-core/src/libgpio/: gpio_fastread.c  gpio_read.c  gpio_toggle_pin_pullup.c  gpio_toggle_universal_pullup.c  gpio_write.c
shiftavr-core/src/libgpio/port/part/: gpio_part.c
shiftavr-core/src/libuart/: receiver_isr.c  start.c  stop.c  transmitter_isr.c  uart_receiver_isr.c  uart_start_protocol.c  uart_stop_protocol.c  uart_transmitter_isr.c  udr_cprint.c  udr_cprintln.c  udr_plain_io.c  udr_print.c  udr_println.c  udr_reset_isr.c  udr_sprint.c  udr_sprintln.c
shiftavr-core/wiki/libadc/: README.md
shiftavr-examples/: CMakeLists.txt
shiftavr-examples/src/: hello_adc.c  hello_gpio_pollread.c  hello_gpio_write.c  hello_uart.c
